对内容进行调整